delete not exist function on index.html

--- a/public/index.html
+++ b/public/index.html
@@ -75,13 +75,13 @@
     <div class="container" style="margin-top : 80px;">
         <div class="row centered">
             <div class="col-lg-6 col-lg-offset-3">
-                <a onclick="select()" class="btn btn-warning btn-lg top-button" href="hospital.html" demo-msg="common.actor.hospital"></a>
+                <a class="btn btn-warning btn-lg top-button" href="hospital.html" demo-msg="common.actor.hospital"></a>
             </div>
             <div class="col-lg-6 col-lg-offset-3">
-                <a onclick="select()" class="btn btn-warning btn-lg top-button" href="doctor.html" demo-msg="common.actor.doctor"></a>
+                <a class="btn btn-warning btn-lg top-button" href="doctor.html" demo-msg="common.actor.doctor"></a>
             </div>
             <div class="col-lg-6 col-lg-offset-3">
-                <a onclick="select()" class="btn btn-warning btn-lg top-button" href="patient.html" demo-msg="common.actor.patient"></a>
+                <a class="btn btn-warning btn-lg top-button" href="patient.html" demo-msg="common.actor.patient"></a>
             </div>
             <div class="col-lg-3"></div>
         </div>
